# voice_assitant_iot

./: .gitignore  MODEL_EXPLAINED.md  Qwen_vs_Tinyllama.md  README.md  commands.sh  config.yaml  config_qwen.yml  key_fingerprint.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.sh  setup_qwen.sh  start_assistant.sh  test_components.py  voice_assistant.py
