[metadata]
name = voice-assistant
version = attr: voice_assistant.__version__
author = Your Name
author_email = your.email@example.com
description = Offline Voice Assistant with Whisper, Local LLM, and TTS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/voice-assistant
classifiers =
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.12
install_requires =
    # Dependencies are managed by pyproject.toml
    # This file is for backward compatibility only

[options.packages.find]
where = src



